pubspec_dev and prod

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: no_solo_padel
+name: no_solo_padel_dev
 description: Organising padel matches
 
 # The following line prevents the package from being accidentally published to
