--- a/pubspec_dev.yaml
+++ b/pubspec_dev.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^2.2.0
   flutter_spinkit: ^5.1.0
   intl: ^0.17.0
+  package_info_plus: ^1.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
