--- a/pubspec_prod.yaml
+++ b/pubspec_prod.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   intl: ^0.17.0
   package_info_plus: ^1.4.0
+  getwidget: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
