--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@
 !pubspec_prod.yaml
 !README.md
 !LICENSE.md
-!script_dev.bat
-!script_prod.bat
+!script.bat
 
 # secret values
 /lib/firebase_options.dart
