--- a/pubspec_prod.yaml
+++ b/pubspec_prod.yaml
@@ -36,6 +36,7 @@ dependencies:
   package_info_plus: ^1.4.0
   getwidget: ^2.0.5
   diacritic: ^0.1.3
+  flutter_bugfender: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
