stage environment added

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,6 @@
 /lib/firebase_options.dart
 /lib/firebase_options_dev.dart
 /lib/firebase_options_prod.dart
+/lib/firebase_options_stage.dart
 /lib/secret.dart
 
