--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.2
-  collection: ^1.19.0
+  collection: ^1.19.1
   google_fonts: ^6.2.1
   flutter_spinkit: ^5.1.0
   intl: ^0.19.0
@@ -40,7 +40,6 @@ dependencies:
   diacritic: ^0.1.3
   flutter_bugfender: ^3.0.0+1
   go_router: ^14.7.2
-  logging: ^1.3.0
   flutter_form_builder: ^9.7.0
   form_builder_validators: ^11.1.1
   # The following adds the Cupertino Icons font to your application.
@@ -50,6 +49,7 @@ dependencies:
   firebase_auth: ^5.3.4
   cloud_firestore: ^5.5.1
   http: ^1.2.2
+  simple_logger: ^1.10.0
 
 dev_dependencies:
   flutter_test:
