--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   cloud_firestore: ^5.5.1
   http: ^1.2.2
   simple_logger: ^1.10.0
+  firebase_storage: ^12.4.4
+  image_picker: ^1.1.2
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
