firestore_helper to firebase_helper
network image: gets avatar from storage
memoryImage: gets avatar from file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_storage: ^12.4.4
   image_picker: ^1.1.2
   path: ^1.9.1
+  image: ^4.5.3
 
 dev_dependencies:
   flutter_test:
