--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   firebase_storage: ^12.4.4
   image_picker: ^1.1.2
   path: ^1.9.1
-  image: ^4.5.3
+  flutter_image_compress: ^2.4.0
 
 dev_dependencies:
   flutter_test:
