--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.2.2
+version: 2.2.3
 
 environment:
   sdk: ">=3.0.0"
@@ -38,7 +38,6 @@ dependencies:
   package_info_plus: ^8.1.2
   getwidget: ^6.0.0
   diacritic: ^0.1.3
-  flutter_bugfender: ^3.0.0+1
   go_router: ^14.7.2
   flutter_form_builder: ^9.7.0
   form_builder_validators: ^11.1.1
@@ -54,6 +53,7 @@ dependencies:
   image_picker: ^1.1.2
   path: ^1.9.1
   flutter_image_compress: ^2.4.0
+  sentry_flutter: ^8.14.1
 
 dev_dependencies:
   flutter_test:
