--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+5
+version: 2.0.0+6
 
 environment:
   sdk: ">=3.0.0"
@@ -55,6 +55,7 @@ dependencies:
   flutter_image_compress: ^2.4.0
   sentry_flutter: ^8.14.2
   web: ^1.1.1
+  flutter_multi_select_items: ^0.4.3
 
 dev_dependencies:
   flutter_test:
